--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <div class="right">
     
                     <div class="studies card"></div>
+                    <div class="experience card"></div>
                 </div>
             </div>
         </section>
